--- a/templates/index.html
+++ b/templates/index.html
@@ -186,6 +186,7 @@ PD 6, Thursday, December 21st</textarea>
             })
             .then(response => {
                 console.log("✅ Received response from backend!");
+		displayTable();
                 return response.text();
             })
             .then(message => {
@@ -196,8 +197,6 @@ PD 6, Thursday, December 21st</textarea>
                 console.error('❌ Error:', error);
                 alert('An error occurred. Please try again.');
             });
-
-	    showParsedData();	
         }
 
 
@@ -208,7 +207,22 @@ PD 6, Thursday, December 21st</textarea>
   var displayHeaders;
   var dataDict;
   var orderedIndices = orderedIndices=[1,4,0,2];
-  
+  var container = document.createElement("div");
+	    
+  function displayTable() {
+    fetch('/getParsedData')
+    .then(res => res.json())
+    .then(data => {
+      allRooms=data.allRooms;
+      displayAllTimes=data.displayAllTimes;
+      displayAllTimesFromData = data.displayAllTimesFromData;
+      displayHeaders=data.displayHeaders;
+      dataDict=data.dataDict;
+      showParsedData();	
+    })
+    .catch(err => console.error("Failed to fetch room data:", err));	
+  }
+	    
   function showParsedData() {
      /* allRooms = ["Room 195", "Room 198", "Room 199"]
       displayAllTimes = [['PD 2 Tuesday, December 19th', 1], ['PD 3, Tuesday, December 19th', 1], ['PD 4, Tuesday, December 19th', 1], ['PD 5, Tuesday, December 19th', 1], ['PD 6, Tuesday, December 19th', 1], ['PD 2, Thursday, December 21st', 1], ['PD 3, Thursday, December 21st', 1], ['PD 4, Thursday, December 21st', 1], ['PD 5, Thursday, December 21st', 1], ['PD 6, Thursday, December 21st', 1]]
@@ -220,19 +234,7 @@ PD 6, Thursday, December 21st</textarea>
   
       orderedIndices=[1,4,0,2] */
 
-    fetch('/getParsedData')
-    .then(res => res.json())
-    .then(data => {
-      allRooms=data.allRooms;
-      displayAllTimes=data.displayAllTimes;
-      displayAllTimesFromData = data.displayAllTimesFromData;
-      displayHeaders=data.displayHeaders;
-      dataDict=data.dataDict;
-    })
-    .catch(err => console.error("Failed to fetch room data:", err));
-	  
-      const container = document.createElement("div");
-
+      container.innerHTML="";
       // Add the informational text
       const infoText = document.createElement("p");
       infoText.textContent = "Make sure this information is correct.";
