--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@ Room 199</textarea>
 
     <h2>All possible times</h2>
     <p>Enter these <i>exactly as they are written</i> as options for the availability question in the Google Form, each time on a separate line</p>
-    <p>Once you press submit you will be able to select which rooms are available at each time.</p>
+    <p>Separate days by a single empty line.</p>
     <textarea id="timesInput" style="width:400px" rows="15">PD 2 Tuesday, December 19th
 PD 3, Tuesday, December 19th
 PD 4, Tuesday, December 19th
