--- a/templates/index.html
+++ b/templates/index.html
@@ -157,7 +157,7 @@ PD 6, Thursday, December 21st</textarea>
             
             const allTimes = document.getElementById('timesInput').value.trim().split('\n').map(t => t.trim()).filter(t => t !== '');
 	    const allRooms = document.getElementById('roomsInput').value.trim().split('\n').map(t => t.trim()).filter(t => t !== '');
-    
+    	    console.log(allRooms);
             // Prepare the data to send
             const data = {
                 url: url,
