--- a/templates/index.html
+++ b/templates/index.html
@@ -140,9 +140,10 @@ PD 6, Thursday, December 21st</textarea>
         document.getElementById("friends").addEventListener("input", checkInputs);
         document.getElementById("blurb").addEventListener("input", checkInputs);*/
         document.getElementById("columnForm").addEventListener("input", checkInputs);
-		document.getElementById("roomsInput").addEventListener("input", checkInputs);
+	document.getElementById("roomsInput").addEventListener("input", checkInputs);
         document.getElementById("timesInput").addEventListener("input", checkInputs);
-	
+
+	    
         function parseData() {
         	console.log("Sending data to backend...");
             // Get the textbox values
@@ -157,7 +158,27 @@ PD 6, Thursday, December 21st</textarea>
             
             const allTimes = document.getElementById('timesInput').value.trim().split('\n').map(t => t.trim()).filter(t => t !== '');
 	    const allRooms = document.getElementById('roomsInput').value.trim().split('\n').map(t => t.trim()).filter(t => t !== '');
-    	    console.log(allRooms);
+
+	    const timesRaw = document.getElementById("timesInput").value;
+	    var days = [];
+	    const lines = timesRaw.split("\n");
+	    var currentDay = [];
+	
+	    for (let line of lines) {
+		const trimmed = line.trim();
+		if (trimmed === "") {
+		    if (currentDay.length > 0) {
+			days.push(currentDay);
+			currentDay = [];
+		    }
+		} else {
+		    currentDay.push(trimmed);
+		}
+	    }
+	    if (currentDay.length > 0) {
+		days.push(currentDay);
+	    }
+		
             // Prepare the data to send
             const data = {
                 url: url,
@@ -169,7 +190,8 @@ PD 6, Thursday, December 21st</textarea>
                 friendsCol: friendsCol,
                 blurbCol: blurbCol,
                 allTimes: allTimes,
-		allRooms: allRooms
+		allRooms: allRooms,
+		days: days
             };
             
             console.log(JSON.stringify(data));
