--- a/templates/1a.html
+++ b/templates/1a.html
@@ -25,7 +25,7 @@
     <div id="tableContainer"></div>
 
   	<br>
-    <button id="sendBackend" style="display: none;" onclick="submitAvailability()">Next</button>
+    <button id="sendBackend" style="display: block;" onclick="submitAvailability()">Next</button>
     
             
     <script>
