--- a/templates/index.html
+++ b/templates/index.html
@@ -101,16 +101,8 @@ PD 6, Thursday, December 21st</textarea>
 
     <br><br>
     <button id="parseData" disabled="true" onclick="parseData()">View Parsed Data</button>
-
-    <br><br>
-    <div id="tableContainer"></div>
-
-  	<br>
-    <button id="sendBackend" style="display: none;" onclick="submitAvailability()">Next</button>
-    
+    <button id="nextPage" disabled="true" onclick="nextPage()">Next</button>
     <script>
-    	//console.log(document.getElementById("firstName"));  // Should NOT be null
-
         function checkInputs() {
             // Get input elements
             const input0 = document.getElementById("spreadsheetUrl").value.trim();
@@ -244,6 +236,7 @@ PD 6, Thursday, December 21st</textarea>
   }
 	    
   function showParsedData() {
+      document.getElementById("nextPage").disabled=false;
      /* allRooms = ["Room 195", "Room 198", "Room 199"]
       displayAllTimes = [['PD 2 Tuesday, December 19th', 1], ['PD 3, Tuesday, December 19th', 1], ['PD 4, Tuesday, December 19th', 1], ['PD 5, Tuesday, December 19th', 1], ['PD 6, Tuesday, December 19th', 1], ['PD 2, Thursday, December 21st', 1], ['PD 3, Thursday, December 21st', 1], ['PD 4, Thursday, December 21st', 1], ['PD 5, Thursday, December 21st', 1], ['PD 6, Thursday, December 21st', 1]]
 
@@ -417,6 +410,10 @@ PD 6, Thursday, December 21st</textarea>
       // Append table to the document body or a specific container
       document.getElementById("Senior Responses").appendChild(table); // Change this if needed
   }
+
+	function nextPage() {
+		window.location.href = "1a.html";
+	}
     
     </script>
 </body>
