--- a/templates/index.html
+++ b/templates/index.html
@@ -412,7 +412,7 @@ PD 6, Thursday, December 21st</textarea>
   }
 
 	function nextPage() {
-		window.location.href = "1a.html";
+		window.location.href = "logistics.html";
 	}
     
     </script>
