--- a/templates/generateStep1.html
+++ b/templates/generateStep1.html
@@ -274,8 +274,8 @@
     }
 
     // Initialize page
-    createRoomElements(initRoomDistribution);
-	document.getElementById("generate").style.display = "block";
+    /*createRoomElements(initRoomDistribution);
+	document.getElementById("generate").style.display = "block";*/
     
     function generateSchedules() {
       const roomDict = {};
