--- a/templates/logistics.html
+++ b/templates/logistics.html
@@ -170,7 +170,7 @@
             .catch(error => {
                 console.error('❌ Error:', error);
             });
-            /*window.location.href = "/generateStep1";*/
+            window.location.href = "/generateStep1";
         }
     </script>
 </body>
